--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,23 @@
 spring.application.name=TaskManagementSystem
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:task_management}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-spring.security.user.name=admin
-spring.security.user.password=12345
+# Logging
+logging.level.org.springframework.security=DEBUG
+logging.level.sys.com=DEBUG
+
+# Server Configuration
+server.error.whitelabel.enabled=false
 
 
 
