update creation date

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,10 @@ logging.level.sys.com=DEBUG
 # Server Configuration
 server.error.whitelabel.enabled=false
 
+# Jackson Configuration
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.deserialization.fail-on-unknown-properties=false
+
 
 
 
